k8s/api.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: testing
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: echo-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 0.2
            memory: 50Mi
          requests:
            cpu: 0.1
            memory: 10Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: testing
  labels:
    app: api
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
  - port: 8088
    targetPort: 80
    protocol: TCP
    name: http
