k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: api.minikube
    http:
      paths:
      - path: /api
        backend:
          serviceName: api
          servicePort: http
